--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Configura a página para ser responsiva, ajustando-se ao tamanho da tela do dispositivo -->
+
+    <meta name="author" content="Eduardo Lima">
+    <!-- Define o nome do autor do documento -->
     
     <title>Filme Batman</title>
     <!-- Define o título da página que aparece na aba do navegador -->
